--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=pimcinema@outlook.com
 SMTP_PASS=majmuncina12
-FRONTEND_URL="http://localhost:3000"
-BASE_URL="http://localhost:"
+FRONTEND_URL="http://movies-frontend-teal.vercel.app"
+BASE_URL="//movies-frontend-teal.vercel.app
