--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=filmovi555@outlook.com
 SMTP_PASS=kosarka12
-FRONTEND_URL="https://movies-frontend-teal.vercel.app/"
-BASE_URL="https://movies-frontend-teal.vercel.app/"
+FRONTEND_URL="http://localhost:3000"
+BASE_URL="http://localhost:"
