--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PORT=5000
 SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=filmovi555@outlook.com
-SMTP_PASS=kosarka12
+SMTP_USER=pimcinema@outlook.com
+SMTP_PASS=majmuncina12
 FRONTEND_URL="http://localhost:3000"
 BASE_URL="http://localhost:"
